Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
       text-align: center;
       margin-top: 20px;
     }
+
+    /* Media queries for responsive design */
+    @media (max-width: 768px) {
+      body {
+        padding: 10px;
+      }
+
+      h1 {
+        font-size: 24px;
+      }
+
+      #clock {
+        font-size: 32px;
+        margin-bottom: 10px;
+      }
+
+      .prayer-time {
+        font-size: 18px;
+        margin-bottom: 5px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -90,8 +111,6 @@
       var currentHour = currentTime.getHours();
       var currentMinute = currentTime.getMinutes();
 
-      resetPrayerColors();
-
       for (var prayer in prayerTimes) {
         var prayerTime = prayerTimes[prayer];
         var prayerElement = document.getElementById(prayer);
@@ -107,12 +126,10 @@
         if (currentHour === hour && currentMinute === minute) {
           prayerElement.style.color = 'green';
           currentPrayer = prayerElement.textContent.split(':')[0];
-          playAlarm();
         } else if (currentHour > hour || (currentHour === hour && currentMinute > minute)) {
           prayerElement.style.color = 'red';
         } else {
           prayerElement.style.color = 'white';
-          setAlarm(hour, minute);
         }
       }
 
@@ -133,28 +150,6 @@
     function requestNotificationPermission() {
       if ('Notification' in window && Notification.permission !== 'granted') {
         Notification.requestPermission();
-      }
-    }
-
-    function playAlarm() {
-      var audio = new Audio('alarm.mp3');
-      audio.play();
-    }
-
-    function setAlarm(hour, minute) {
-      var now = new Date();
-      var alarmTime = new Date(now.getFullYear(), now.getMonth(), now.getDate(), hour, minute, 0);
-
-      var timeUntilAlarm = alarmTime - now;
-      if (timeUntilAlarm > 0) {
-        setTimeout(playAlarm, timeUntilAlarm);
-      }
-    }
-
-    function resetPrayerColors() {
-      var prayerElements = document.getElementsByClassName('prayer-time');
-      for (var i = 0; i < prayerElements.length; i++) {
-        prayerElements[i].style.color = 'white';
       }
     }
 
