--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     }
 
     function playAlarmSound() {
-      var audio = new Audio('alarm.mp3');
+      var audio = new Audio('alarmsound.mp3');
       audio.play();
     }
 
