--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="manifest" href="manifest.json">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family:helvética;
       background-image: url('fondo.jpg');
       background-size: cover;
       background-position: center;
