--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>Prayer Clock</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="manifest.json">
   <style>
     body {
       font-family: helvetica;
@@ -40,6 +39,16 @@
       margin-top: 20px;
     }
 
+    .tv-frame {
+      display: inline-block;
+      background-image: url('tv-frame.png');
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 560px;
+      height: 315px;
+    }
+
     /* Media queries for responsive design */
     @media (max-width: 768px) {
       body {
@@ -60,7 +69,7 @@
         margin-bottom: 5px;
       }
 
-      #livestream iframe {
+      .tv-frame {
         width: 100%;
         height: auto;
       }
@@ -83,13 +92,12 @@
 
   <div id="livestream">
     <h2>Transmisión en vivo desde La Meca</h2>
-    <iframe width="569" height="569" src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="tv-frame">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
   </div>
 
   <script>
-    var notificationScheduled = false;
-    var alarmScheduled = false;
-
     function updateClock() {
       var clockElement = document.getElementById('clock');
       var currentTime = new Date();
@@ -107,9 +115,9 @@
 
     function updatePrayerTimes() {
       var prayerTimes = {
-        fajr: { hour: 4, minute: 30 },
-        dhuhr: { hour: 12, minute: 0 },
-        asr: { hour: 15, minute: 45 },
+        fajr: { hour: 4, minute: 11 },
+        dhuhr: { hour: 11, minute: 52 },
+        asr: { hour: 15, minute: 19 },
         maghrib: { hour: 18, minute: 16 },
         isha: { hour: 19, minute: 29 }
       };
@@ -134,6 +142,7 @@
         if (currentHour === hour && currentMinute === minute) {
           prayerElement.style.color = 'green';
           currentPrayer = prayerElement.textContent.split(':')[0];
+          break; // Break the loop if the current prayer time is found
         } else if (currentHour > hour || (currentHour === hour && currentMinute > minute)) {
           prayerElement.style.color = 'red';
         } else {
@@ -142,18 +151,8 @@
       }
 
       if (currentPrayer) {
-        if (!notificationScheduled) {
-          showNotification('Es hora de ' + currentPrayer + '!');
-          notificationScheduled = true;
-        }
-
-        if (!alarmScheduled) {
-          playAlarmSound();
-          alarmScheduled = true;
-        }
-      } else {
-        notificationScheduled = false;
-        alarmScheduled = false;
+        showNotification('Es hora de ' + currentPrayer + '!');
+        playAlarmSound();
       }
     }
 
@@ -180,19 +179,6 @@
     setInterval(updateClock, 1000);
     setInterval(updatePrayerTimes, 1000);
     requestNotificationPermission();
-  </script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('service-worker.js')
-          .then(function(registration) {
-            console.log('Service Worker registrado con éxito:', registration);
-          })
-          .catch(function(error) {
-            console.log('Error al registrar el Service Worker:', error);
-          });
-      });
-    }
   </script>
 </body>
 </html>
