--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
     <div class="prayer-time" id="isha">Isha: </div>
   </div>
 
-  <div id="livestream">
-    <h2>Transmisión en vivo desde La Meca</h2>
-    <div class="tv-frame">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+ <div id="livestream">
+  <h2>Transmisión en vivo desde La Meca</h2>
+  <div class="tv-frame">
+    <img src="tv-frame.png" alt="Cuadro de TV">
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+</div>
 
   <script>
     function updateClock() {
