--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Prayer Clock</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json">
   <style>
     body {
       font-family: helvetica;
@@ -37,16 +38,23 @@
     #livestream {
       text-align: center;
       margin-top: 20px;
+      position: relative;
     }
 
     .tv-frame {
-      display: inline-block;
-      background-image: url('tv-frame.png');
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      width: 560px;
-      height: 315px;
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%; /* Proporción 16:9 (56.25% = 9 / 16 * 100%) */
+      overflow: hidden;
+    }
+
+    .tv-frame img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     /* Media queries for responsive design */
@@ -70,8 +78,7 @@
       }
 
       .tv-frame {
-        width: 100%;
-        height: auto;
+        padding-top: 75%; /* Proporción 4:3 (75% = 3 / 4 * 100%) */
       }
     }
   </style>
@@ -90,13 +97,13 @@
     <div class="prayer-time" id="isha">Isha: </div>
   </div>
 
- <div id="livestream">
-  <h2>Transmisión en vivo desde La Meca</h2>
-  <div class="tv-frame">
-    <img src="tv-frame.png" alt="Cuadro de TV">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div id="livestream">
+    <h2>Transmisión en vivo desde La Meca</h2>
+    <div class="tv-frame">
+      <img src="tv-frame.png" alt="Cuadro de TV">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
   </div>
-</div>
 
   <script>
     function updateClock() {
@@ -143,7 +150,6 @@
         if (currentHour === hour && currentMinute === minute) {
           prayerElement.style.color = 'green';
           currentPrayer = prayerElement.textContent.split(':')[0];
-          break; // Break the loop if the current prayer time is found
         } else if (currentHour > hour || (currentHour === hour && currentMinute > minute)) {
           prayerElement.style.color = 'red';
         } else {
@@ -151,9 +157,10 @@
         }
       }
 
-      if (currentPrayer) {
+      if (currentPrayer && !isNotificationShown()) {
         showNotification('Es hora de ' + currentPrayer + '!');
         playAlarmSound();
+        markNotificationShown();
       }
     }
 
@@ -177,9 +184,30 @@
       audio.play();
     }
 
+    function isNotificationShown() {
+      return localStorage.getItem('notificationShown') === 'true';
+    }
+
+    function markNotificationShown() {
+      localStorage.setItem('notificationShown', 'true');
+    }
+
     setInterval(updateClock, 1000);
     setInterval(updatePrayerTimes, 1000);
     requestNotificationPermission();
+  </script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('service-worker.js')
+          .then(function(registration) {
+            console.log('Service Worker registrado con éxito:', registration);
+          })
+          .catch(function(error) {
+            console.log('Error al registrar el Service Worker:', error);
+          });
+      });
+    }
   </script>
 </body>
 </html>
