--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <h2>Transmisión en vivo desde La Meca</h2>
     <div class="tv-frame">
       <img src="tv-frame.png" alt="TV Frame">
-      <video src="https://example.com/live-stream" autoplay controls></video>
+      <video src="https://www.youtube.com/watch?v=vEqogii_zFA&pp=ygUXbGEgbWVjYSBlbiB2aXZvIHlvdXR1YmU%3D" autoplay controls></video>
     </div>
   </div>
 
