--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <div id="livestream">
     <h2>Transmisión en vivo desde La Meca</h2>
-    <video class="livestream-video" src="https://www.youtube.com/watch?v=hrnT2IFqyro&pp=ygUPbGEgbWVjYSBlbiB2aXZv" controls autoplay></video>
+    <iframe class="livestream-video" src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allowfullscreen></iframe>
   </div>
 
   <script>
