--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
       margin-top: 20px;
     }
 
-    .livestream-video {
-      width: 100%;
-      max-width: 640px;
+    video {
+      max-width: 80%;
       height: auto;
     }
 
@@ -84,7 +83,7 @@
 
   <div id="livestream">
     <h2>Transmisión en vivo desde La Meca</h2>
-    <iframe class="livestream-video" src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allowfullscreen></iframe>
+    <video src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allowfullscreen></video>
   </div>
 
   <script>
