--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <div id="livestream">
     <h2>Transmisión en vivo desde La Meca</h2>
-    <video src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allowfullscreen></video>
+    <video src="https://www.youtube.com/watch?v=hrnT2IFqyro&pp=ygUPbGEgbWVjYSBlbiB2aXZv" frameborder="0" allowfullscreen></video>
   </div>
 
   <script>
