--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       margin-top: 20px;
     }
 
-    video {
+    iframe {
       width: 80%;
       max-width: 800px;
       height: auto;
@@ -86,7 +86,7 @@
 
   <div id="livestream">
     <h2>Transmisión en vivo desde La Meca</h2>
-    <video id="livestream-video" src="https://www.youtube.com/watch?v=hrnT2IFqyro&pp=ygUPbGEgbWVjYSBlbiB2aXZv" frameborder="0" allowfullscreen></video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/hrnT2IFqyro" frameborder="0" allowfullscreen></iframe>
   </div>
 
   <script>
