--- a/index.html
+++ b/index.html
@@ -27,12 +27,21 @@
     }
 
     #prayer-times {
-      text-align: center;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      text-align: left;
+      color: white;
+      font-size: 24px;
+    }
+
+    #prayer-times h2 {
+      font-size: 24px;
+      margin-bottom: 10px;
     }
 
     .prayer-time {
-      font-size: 24px;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     #livestream {
