--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <div id="clock"></div>
 
   <div id="prayer-times">
-    <h2>Horarios de los rezos</h2>
+    <h2>Horarios de los rezos del dia</h2>
     <div class="prayer-time" id="fajr">Fajr: </div>
     <div class="prayer-time" id="dhuhr">Dhuhr: </div>
     <div class="prayer-time" id="asr">Asr: </div>
